# copilotkit-langgraph-trial

./: .env.example  .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: agent.py  config.py  graph.py  main.py  models.py  prompts.py  text_loader.py
backend/sample_texts/: sample.txt
docs/: progress.md
frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/analysis/: AnalysisApprovalDialog.tsx  AnalysisHeader.tsx  CharactersSection.tsx  MessagesPanel.tsx  ProgressPanel.tsx  ScenesSection.tsx
frontend/src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  scroll-area.tsx
frontend/src/hooks/: useAgentRunner.ts
frontend/src/lib/: format.ts  status.ts
frontend/src/providers/: AguiProvider.tsx
sample_texts/: README.md
