[project]
name = "novel-analyzer-backend"
version = "0.1.0"
description = "Backend service for the novel analysis demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn>=0.32.0",
  "langgraph>=1.0.2",
  "langchain-openai>=0.2.1",
  "langchain-text-splitters>=0.1.1",
  "python-dotenv>=1.0.1",
  "ag-ui-langgraph>=0.0.18",
  "pydantic-settings>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "black>=24.10.0",
  "ruff>=0.7.3",
  "grandalf"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "W", "RUF100"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["app"]
